# DragonTranslator

./: .gitattributes  .gitignore  CLAUDE.md  README.md  dev.bat  index.html  package-lock.json  package.json  release.ps1  vite.config.ts  打包.bat  运行.bat
runtime/: .gitignore  default-config.json
runtime/bergamot/test/: package-lock.json  package.json  test.html  test.mjs  test_api.mjs  test_lowlevel.mjs  test_multi.mjs  test_percall.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Cargo.toml.bak  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  llama_manager.rs  logger.rs  paths.rs  tts.rs  user_files.rs
src/components/agents/: AgentEditor.tsx
src/components/layout/: HistoryPanel.tsx  MainPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/settings/: ApiConfig.tsx  LocalModelTab.tsx  SettingsDialog.tsx  ShortcutTab.tsx  StyleManager.tsx  TTSTab.tsx
src/components/translation/: InputArea.tsx  OutputArea.tsx  OutputCard.tsx
src/hooks/: useMultiTranslate.ts  usePersistence.ts  useTTS.ts  useTranslate.ts
src/services/: bergamot.ts  logger.ts  translation.ts
src/services/llm/: adapter.ts
src/stores/: agentStore.ts  configStore.ts  historyStore.ts
src/types/: index.ts
user/: default-config.json
